2021-02-07 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru/ipmi-fru.c: Do not require ipmi_ctx to be set if
	loading data via buffer in ipmi_fru_open_device_id_with_buffer().

	* ipmi-fru: Do not require opening of an IPMI session if using
	--fru-file option.

2021-02-07 Albert Chu <chu11@llnl.gov>

	* etc/: Update conf file permissions.

	* Globally fix a number of typos.

2021-02-06 Fabio Fantoni <fantonifabio@tiscali.it>

	* etc/: Update systemd service files permissions.

2020-09-30 Albert Chu <chu11@llnl.gov>

	* man/manpage-common-workaround-extra-text.man: Document that
	Supermicro boards don't work with IPMI 1.5.
	
2020-09-21 Albert Chu <chu11@llnl.gov>

	* man/ipmi-sel.8.pre.in: Fix typo

2020-09-03 Christian Ehrhardt <christian.ehrhardt@canonical.com>

	* libfreeipmi/locate/ipmi-locate-acpi-spmi.c
	(_ipmi_acpi_get_table_dev_mem): Fix segfault

2020-07-28 Albert Chu <chu11@llnl.gov>

	* man/freeipmi.conf.5.pre.in: Fix typo

2020-01-28 Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Fix formatting typo that led to line not
	appearing in manpage.

2020-01-07 Albert Chu <chu11@llnl.gov>

	* bmc-device/bmc-device.c (write_fru): Fix invalid number of args
	to pstdout_printf.

	* ipmi-oem/ipmi-oem-dell.c (ipmi_oem_dell_get_system_info): Fix
	invalid output with invalid variable passed to pstdout_printf().

	* ipmi-oem/ipmi-oem-intel.c (ipmi_oem_intel_get_smtp_config): Fix
	invalid call to pstdout_printf(), forgot output parameters.

	* ipmi-oem/ipmi-oem-intelnm.c
	(_ipmi_oem_intelnm_get_node_manager_policy_suspend_periods_common):
	Fix invalid call to pstdout_printf(), forgot output parameter.

	* ipmi-oem/ipmi-oem-quanta.c
	(ipmi_oem_quanta_get_processor_information): Fix invalid call to
	pstdout_printf(), forgot output parameters.

	* libipmiconsole/ipmiconsole_processing
	(_serial_keepalive_timeout): Fix bad debug trace without parameter
	for output.

	* common/toolcommon/pstdout.c (pstdout_set_debug_flags): Fix typo
	&& instead of &.
